--- a/personal.html
+++ b/personal.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="icon" href="favicon.ico?">
+	<link rel="icon" href="imgs/favicon.ico">
 	<link rel="stylesheet" href="css/html5reset.css">
 	<link rel="stylesheet" href="css/style.css">
 	<title>Family Page</title>
@@ -22,13 +22,15 @@
 	</header>
 	
 	<main>
-	<p>In 2016 I loaded my kids into the minivan and took them on a drive across the Northern midwest states.  We went to Wisconsin Dells, the Badlands, Mount Rushmore, Jewel Cave, and Custer State Park.</p>
+		<p>In 2016 I loaded my kids into the minivan and took them on a drive across the Northern midwest states.  We went to Wisconsin Dells, the Badlands, Mount Rushmore, Jewel Cave, and Custer State Park.</p>
 		<img src = "imgs/wisconsin_dells.jpg" alt = "Wisconsin Dells" width="500"/>
 		<img src = "imgs/badlands.jpg" alt = "Badlands" width="500"/>
 		<img src = "imgs/falling.jpg" alt = "Kid falling" width="500"/>
-		<img src = "imgs/jewel_cave.JPG" alt = "Jewel cave" width="500"/> 
+		<img src = "imgs/jewel_cave.jpg" alt = "Jewel cave" width="500"/> 
 	</main>
-	Colleen van Lent &copy; 2020
+	<footer>
+		<p>Colleen van Lent &copy; 2020</p>
+	</footer>
 </body>
 </html>
 
