--- a/personal.html
+++ b/personal.html
@@ -26,7 +26,7 @@
 		<img src = "imgs/wisconsin_dells.jpg" alt = "Wisconsin Dells" width="500"/>
 		<img src = "imgs/badlands.jpg" alt = "Badlands" width="500"/>
 		<img src = "imgs/falling.jpg" alt = "Kid falling" width="500"/>
-		<img src = "imgs/jewel_cave.jpg" alt = "Jewel cave" width="500"/> 
+		<img src = "imgs/jewel_cave.JPG" alt = "Jewel cave" width="500"/> 
 	</main>
 	<footer>
 		<p>Colleen van Lent &copy; 2020</p>
